--- a/Javascript/Tutorial_1/Lesson_1_KoPapirOllo/03-game_advanced.html
+++ b/Javascript/Tutorial_1/Lesson_1_KoPapirOllo/03-game_advanced.html
@@ -11,6 +11,7 @@
 <body>
 
   <p class="title">Rock Paper Scissors</p>
+  <p>I've made changes in zsuzsi2 branch</p>
 
   <button onclick="playGame('rock')" class="move-button"><img class="move-icon" src="../images/rock-emoji.png" alt="rock"></button>
 
