--- a/Javascript/Tutorial_1/Lesson_4_AdvancedFunctions/advanced-functions.html
+++ b/Javascript/Tutorial_1/Lesson_4_AdvancedFunctions/advanced-functions.html
@@ -48,8 +48,7 @@
     run(function(){
       console.log('Hello4');
     });  //Funtion as parameter, Passing a fanction into => CALLBACK FUNCTIONS
-    */
-
+   
     //SET TIMEOUT , Asynchronous Coding
 
     setTimeout(function(){
@@ -60,7 +59,17 @@
 
     // setInterval(function(){
     //   console.log('interval');
-    // }, 3000);   //It will be repeated in 3000 sec
+    // }, 3000);   //It will be repeated in 3000 sec */
+
+    [
+      'make dinner',
+      'wash dishes',
+      'watch youtube'
+    ].forEach(function(value, index){
+      console.log(index);
+      console.log(value);
+    });
+
 
   </script>
 </body>
