--- a/Javascript/Tutorial_1/Lesson_1_KoPapirOllo/03-game_advanced.html
+++ b/Javascript/Tutorial_1/Lesson_1_KoPapirOllo/03-game_advanced.html
@@ -12,7 +12,7 @@
 
   <p class="title">Rock Paper Scissors</p>
 
-  <button onclick="playGame('rock')" class="move-button"><img class="move-icon" src="../images/rock-emoji.png" alt="rock"></button>
+  <button  class="move-button js-rock-button"><img class="move-icon" src="../images/rock-emoji.png" alt="rock"></button>
 
   <button onclick="playGame('paper')" class="move-button"><img class="move-icon" src="../images/paper-emoji.png" alt="paper"></button>
 
@@ -31,7 +31,7 @@
   "
   >Reset Score</button>
 
-  <butto class="auto-play-button" onclick="autoPlay()">Auto Play</button>
+  <butto class="auto-play-button" onclick="autoPlay()" >Auto Play</button>
 
   <script src="./03_game_advanced.js"></script>
 </body>
