--- a/Javascript/Tutorial_1/Lesson_4_AdvancedFunctions/advanced-functions.html
+++ b/Javascript/Tutorial_1/Lesson_4_AdvancedFunctions/advanced-functions.html
@@ -6,8 +6,32 @@
   <title>Advanced Functions</title>
 </head>
 <body>
+
+  <button onclick="" class="js-button">Click</button>
   
   <script>
+
+    const buttonElement = document.querySelector('.js-button');
+
+    // EVENTLISTENER  , Can be add  multiple at once
+
+    buttonElement.addEventListener('click', () => {
+      console.log('Click');
+    });
+    
+    // To remove EvenListener
+    const eventListener = () => {
+      console.log('Click 1');
+    }; 
+
+    buttonElement.addEventListener('click', eventListener);
+    buttonElement.removeEventListener('click', eventListener);
+
+    buttonElement.addEventListener('click', () => {
+      console.log('Click2');
+    });
+
+
     /*//Functions = Values
     function greeting(){
       console.log('Hello');
@@ -61,15 +85,65 @@
     //   console.log('interval');
     // }, 3000);   //It will be repeated in 3000 sec */
 
+    // [
+    //   'make dinner',
+    //   'wash dishes',
+    //   'watch youtube'
+    // ].forEach(function(value, index){
+
+    //   if(value === 'wash dishes'){
+    //     return; // = CONTINUE in for loop
+    //   }
+
+    //   console.log(index);
+    //   console.log(value);
+    // });
+
     [
       'make dinner',
       'wash dishes',
       'watch youtube'
-    ].forEach(function(value, index){
+    ].forEach(value, index => {
+
+      if(value === 'wash dishes'){
+        return; // = CONTINUE in for loop
+      }
+
       console.log(index);
       console.log(value);
     });
 
+
+
+    //Arrow Functions  ! Normall Function can be HOSTED
+    //Hoisting = Can be call before it's declaration
+
+    /*const regularFunction = function(param,param2){
+      console.log('hello');
+      return 5;
+    }
+
+    const arrowFunction = (param, param2) => {
+      console.log('hello');
+      return 5;
+    }
+    arrowFunction();
+
+
+    const oneParam = param => {
+      console.log(param + 1);
+    }
+
+    const oneLine = () => 2 + 3; // Automatically return ! (2 + 3 = 5)
+
+    const object2 = {
+      method: () => {
+
+      },
+      method() {
+        // In object shorthand method for function !!!
+      }
+    }; */
 
   </script>
 </body>
