--- a/Javascript/Tutorial_2_AMAZON/amazon.html
+++ b/Javascript/Tutorial_2_AMAZON/amazon.html
@@ -56,10 +56,9 @@
       <div class="products-grid js-products-grid">
     </div>
 
-    
-    <script src="data/products.js"></script>
+  
     <script type="module" src="scripts/amazon.js"></script>
-    <!--Modules only works with life server !!! type = module !!! -->
+    <!--Modules only works with life server !!! type = module  + export + import !!! -->
 
   </body>
 </html>
